--- a/templates/mautic.conf.j2
+++ b/templates/mautic.conf.j2
@@ -4,7 +4,7 @@ DocumentRoot /var/www/html/mautic
         Options FollowSymLinks
         AllowOverride All
     </Directory>
-    <Directory /var/www/mautic>
+    <Directory /var/www/html/mautic>
         Options FollowSymLinks MultiViews
         AllowOverride All
         Order allow,deny
